cabal-version:      2.4
name:               tag-preProcess
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             julia
maintainer:         julien.jean@epitech.eu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PreProcess
    other-modules:
        Model.BinArgs
        Model.ErrorMessage
    ghc-options:
        -Wall
        -Wextra
        -Wincomplete-uni-patterns
        -threaded
    -- Modules included in this library but not exported.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable tag-preProcess
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    --
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        tag-preProcess

    hs-source-dirs:   app
    default-language: Haskell2010
